--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "eslint-config-custom": "*",
+    "jest": "^29.4.1",
     "prettier": "latest",
     "rimraf": "^4.1.2",
+    "ts-jest": "^29.0.5",
     "turbo": "latest",
     "typescript": "^4.9.4"
   },
