--- a/packages/in-manga-sdk/package.json
+++ b/packages/in-manga-sdk/package.json
@@ -8,14 +8,20 @@
     "build": "tsc",
     "clean": "rimraf dist",
     "clean:node_modules": "rimraf node_modules",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^1.2.6",
+    "cheerio": "^1.0.0-rc.12"
+  },
   "devDependencies": {
-    "tsconfig": "*",
     "eslint": "^7.32.0",
-    "eslint-config-custom": "*"
+    "eslint-config-custom": "*",
+    "tsconfig": "*",
+    "jest-config": "*"
   }
 }
