--- a/apps/manga-cli/tsconfig.json
+++ b/apps/manga-cli/tsconfig.json
@@ -2,8 +2,8 @@
     "extends": "tsconfig/base.json",
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es2016",
+        "target": "es2020",
         "outDir": "./build"
     },
-    "include": ["src/**/*"]
+    "include": ["src/**/*", "node_modules/**/*"]
 }
