--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "latest",
     "rimraf": "^4.1.2",
     "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "turbo": "latest",
     "typescript": "^4.9.4"
   },
