--- a/packages/in-manga-sdk/package.json
+++ b/packages/in-manga-sdk/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist coverage",
     "clean:node_modules": "rimraf node_modules",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -15,13 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.6",
+    "axios": "0.27.2",
     "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
-    "tsconfig": "*",
-    "jest-config": "*"
+    "jest-config": "*",
+    "tsconfig": "*"
   }
 }
