--- a/apps/manga-cli/package.json
+++ b/apps/manga-cli/package.json
@@ -15,6 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "0.27.2",
     "commander": "^10.0.0",
     "in-manga-sdk": "*",
     "inquirer": "8.2.5",
