--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clean": "turbo run clean",
     "build:cli": "turbo run build:cli",
     "clean:node_modules": "turbo run clean:node_modules && rimraf node_modules",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "test": "turbo run test"
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
