--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,6 +39,7 @@ jobs:
     - name: Create a new GitHub release
       if: env.VERSION != steps.previous_version.outputs.version
       uses: actions/create-release@v1
+      id: create_release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
