--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "clean": "turbo run clean",
+    "clean:cache": "turbo run clean:cache",
+    "clean:full": "turbo run clean:full && rimraf node_modules",
     "build:cli": "turbo run build:cli",
     "clean:node_modules": "turbo run clean:node_modules && rimraf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
