--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,8 @@
       "outputs": ["dist/**"]
     },
     "clean": {},
+    "clean:full": {},
+    "clean:cache": {},
     "clean:node_modules": {},
     "test": {}
   }
