--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "build:cli": "turbo run build:cli",
     "clean:node_modules": "turbo run clean:node_modules && rimraf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "eslint-config-custom": "*",
+    "husky": "^8.0.3",
     "jest": "^29.4.1",
+    "lint-staged": "^13.1.2",
     "prettier": "latest",
     "rimraf": "^4.1.2",
     "ts-jest": "^29.0.5",
@@ -32,6 +35,5 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
   "packageManager": "yarn@1.22.19"
 }
