--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "husky": "^8.0.3",
     "jest": "^29.4.1",
     "lint-staged": "^13.1.2",
-    "prettier": "latest",
+    "prettier": "2.8.4",
     "rimraf": "^4.1.2",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
