--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:cli": "turbo run build:cli",
     "clean:node_modules": "turbo run clean:node_modules && rimraf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx}\"",
     "test": "turbo run test",
     "prepare": "husky install"
   },
