--- a/apps/manga-desktop/package.json
+++ b/apps/manga-desktop/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && electron-builder --mac --win --linux",
+    "build": "tsc && vite build",
+    "build:electron-app": "tsc && vite build && electron-builder --mac --win --linux",
     "preview": "vite preview",
     "pree2e": "vite build --mode=test",
     "e2e": "playwright test",
