--- a/.github/workflows/ci.develop.yml
+++ b/.github/workflows/ci.develop.yml
@@ -21,5 +21,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
       - run: yarn
+      - run: yarn format:check
+      - run: yarn lint
       - run: yarn test
       - run: yarn build
