--- a/apps/manga-desktop/package.json
+++ b/apps/manga-desktop/package.json
@@ -26,6 +26,11 @@
     "clean:full": "npm run clean && npm run clean:cache && npm run clean:node_modules"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -36,14 +41,14 @@
     "@vitejs/plugin-react": "^3.0.1",
     "electron": "^22.0.3",
     "electron-builder": "^23.6.0",
+    "eslint": "^8.2.0",
+    "eslint-config-custom": "*",
     "sass": "^1.57.1",
+    "tsconfig": "*",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "vite-electron-plugin": "^0.7.4",
-    "vite-plugin-electron-renderer": "^0.12.1",
-    "eslint": "^8.2.0",
-    "eslint-config-custom": "*",
-    "tsconfig": "*"
+    "vite-plugin-electron-renderer": "^0.12.1"
   },
   "engines": {
     "node": "^14.18.0 || >=16.0.0"
