--- a/apps/manga-desktop/package.json
+++ b/apps/manga-desktop/package.json
@@ -43,6 +43,8 @@
     "electron-builder": "^23.6.0",
     "eslint": "^8.2.0",
     "eslint-config-custom": "*",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
     "sass": "^1.57.1",
     "tsconfig": "*",
     "typescript": "^4.9.4",
