--- a/apps/manga-desktop/package.json
+++ b/apps/manga-desktop/package.json
@@ -31,8 +31,11 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "i18next": "^22.4.10",
+    "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.29.2",
