feat: added modal settings to app

--- a/apps/manga-desktop/tsconfig.json
+++ b/apps/manga-desktop/tsconfig.json
@@ -20,7 +20,9 @@
       "@types": ["src/types"],
       "@types/*": ["src/types/*"],
       "@utils": ["src/utils"],
-      "@utils/*": ["src/utils/*"]
+      "@utils/*": ["src/utils/*"],
+      "@ui": ["src/ui"],
+      "@ui/*": ["src/ui/*"]
     }
   },
   "include": ["src"],
