--- a/apps/manga-desktop/package.json
+++ b/apps/manga-desktop/package.json
@@ -35,7 +35,9 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.1.5"
+    "react-i18next": "^12.1.5",
+    "in-manga-sdk": "*",
+    "common-utils": "*"
   },
   "devDependencies": {
     "@playwright/test": "^1.29.2",
