--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ dist
 dist-electron
 release
 
+!apps/manga-desktop-2/release
+apps/manga-desktop-2/release/app/dist
+apps/manga-desktop-2/release/build
+
 # cache
 .cache
 .manga-cli-cache
