feat: deps migration

--- a/apps/manga-desktop-2/package.json
+++ b/apps/manga-desktop-2/package.json
@@ -102,7 +102,17 @@
     "electron-updater": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.9",
+    "i18next": "^22.4.10",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "react-i18next": "^12.1.5",
+    "in-manga-sdk": "*",
+    "common-utils": "*"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
@@ -133,7 +143,8 @@
     "electron-builder": "^23.6.0",
     "electron-devtools-installer": "^3.2.0",
     "electronmon": "^2.0.2",
-    "eslint": "^8.33.0",
+    "eslint": "^8.2.0",
+    "eslint-config-custom": "*",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-erb": "^4.0.6",
     "eslint-import-resolver-typescript": "^3.5.3",
@@ -163,7 +174,8 @@
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "typescript": "^4.9.5",
+    "tsconfig": "*",
+    "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.7.0",
