--- a/apps/manga-desktop-2/tsconfig.json
+++ b/apps/manga-desktop-2/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "incremental": true,
     "target": "es2021",
-    "module": "commonjs",
-    "lib": ["dom", "es2021"],
+    "module": "CommonJS",
+    "lib": ["DOM", "es2021", "DOM.Iterable", "ESNext"],
     "jsx": "react-jsx",
     "strict": true,
     "sourceMap": true,
@@ -13,7 +13,18 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "allowJs": true,
-    "outDir": ".erb/dll"
+    "outDir": ".erb/dll",
+    "paths": {
+      "@/*": ["renderer/*"],
+      "@components": ["renderer/components"],
+      "@components/*": ["renderer/components/*"],
+      "@types": ["renderer/types"],
+      "@types/*": ["renderer/types/*"],
+      "@utils": ["renderer/utils"],
+      "@utils/*": ["renderer/utils/*"],
+      "@ui": ["renderer/ui"],
+      "@ui/*": ["renderer/ui/*"]
+    }
   },
   "exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
 }
