--- a/apps/manga-desktop/package.json
+++ b/apps/manga-desktop/package.json
@@ -32,22 +32,21 @@
   },
   "browserslist": [],
   "dependencies": {
-    "electron-debug": "^3.2.0",
-    "electron-log": "^4.4.8",
-    "electron-updater": "^5.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "electron-debug": "^3.2.0",
+    "electron-log": "^4.4.8",
+    "electron-updater": "^5.3.0",
     "i18next": "^22.4.10",
     "i18next-browser-languagedetector": "^7.0.1",
-    "react-i18next": "^12.1.5",
     "in-manga-sdk": "*",
-    "common-utils": "*"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.5",
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
@@ -79,8 +78,8 @@
     "electron-devtools-installer": "^3.2.0",
     "electronmon": "^2.0.2",
     "eslint": "^8.2.0",
-    "eslint-config-custom": "*",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-custom": "*",
     "eslint-config-erb": "^4.0.6",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-import-resolver-webpack": "^0.13.2",
@@ -108,8 +107,8 @@
     "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "tsconfig": "*",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
