--- a/apps/manga-desktop/package.json
+++ b/apps/manga-desktop/package.json
@@ -38,6 +38,8 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@reduxjs/toolkit": "^1.9.3",
+    "@tanstack/react-query": "^4.24.10",
+    "@tanstack/react-query-devtools": "^4.24.12",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
