--- a/apps/manga-cli/package.json
+++ b/apps/manga-cli/package.json
@@ -24,7 +24,7 @@
     "commander": "^10.0.0",
     "figlet": "^1.5.2",
     "gradient-string": "^2.0.2",
-    "in-manga-sdk": "*",
+    "manga-providers": "*",
     "inquirer": "8.2.5",
     "lodash.get": "^4.4.2",
     "lodash.template": "^4.5.0",
