--- a/apps/manga-desktop/package.json
+++ b/apps/manga-desktop/package.json
@@ -45,7 +45,7 @@
     "electron-updater": "^5.3.0",
     "i18next": "^22.4.10",
     "i18next-browser-languagedetector": "^7.0.1",
-    "in-manga-sdk": "*",
+    "manga-providers": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
