feat: fix MangaCard missing fields + fix title noWrap

--- a/apps/manga-desktop/tsconfig.json
+++ b/apps/manga-desktop/tsconfig.json
@@ -29,7 +29,9 @@
       "@redux": ["renderer/redux"],
       "@redux/*": ["renderer/redux/*"],
       "@rquery": ["renderer/rquery"],
-      "@rquery/*": ["renderer/rquery/*"]
+      "@rquery/*": ["renderer/rquery/*"],
+      "@i18n": ["renderer/i18n"],
+      "@i18n/*": ["renderer/i18n/*"]
     }
   },
   "exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
