--- a/apps/manga-desktop/package.json
+++ b/apps/manga-desktop/package.json
@@ -22,6 +22,7 @@
     "start:preload": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.preload.dev.ts",
     "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
     "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch",
     "lint:fix": "cross-env NODE_ENV=development eslint src --ext .js,.jsx,.ts,.tsx --fix",
     "clean": "rimraf release/build release/app/dist .erb/dll",
     "clean:cache": "rimraf .turbo .cache",
@@ -40,17 +41,20 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.24.10",
     "@tanstack/react-query-devtools": "^4.24.12",
+    "axios": "0.27.2",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
     "i18next": "^22.4.10",
     "i18next-browser-languagedetector": "^7.0.1",
     "manga-providers": "*",
+    "pdfkit": "0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "winattr": "^3.0.0"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
@@ -99,7 +103,9 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
+    "jest-config": "*",
     "mini-css-extract-plugin": "^2.7.2",
+    "node-loader": "^2.0.0",
     "prettier": "^2.8.4",
     "react-refresh": "^0.14.0",
     "react-test-renderer": "^18.2.0",
